CHANGES IN FLTK 1.1.0

	- BC++ fixes.
	- The pixmap_browser demo didn't check for a NULL image
	  pointer.
	- Fl_File_Icon::find() now uses fl_filename_isdir()
	  under WIN32 to check for directories.
	- Fl_File_Chooser's preview code called refcount()
	  on the deleted image's object.
	- Fixed another problem with the Fl_BMP_Image loader.
	- The fl_file_chooser() callback was being called with a
	  NULL filename.
	- Documented that fl_push_clip() is preferred over
	  fl_clip(), with a corresponding source change.
	- Minor changes to the MacOS X event handling code.
	- Added syntax highlighting example code to the editor
	  test program.
	- Fl_Text_Display didn't range check style buffer
	  values.
	- Added "dark" color constants (FL_DARK_RED, etc.)
	- The MacOS font code was missing definitions for
	  fl_font_ and fl_size_.


CHANGES IN FLTK 1.1.0rc3

	- Documentation updates.
	- New file chooser from design contest.
	- Did some testing with Valgrind and fixed some memory
	  problems in Fl_Help_View::Fl_HelpView,
	  Fl_Menu_::remove(), Fl_Text_Display::draw_vline(), and
	  resizeform() (convenience dialogs).
	- Fixed some redraw() bugs, and now redraw portions of
	  the parent widget when the label appears outside the
	  widget.
	- The boolean (char) value methods in Fl_Preferences
	  have been removed since some C++ compilers can't
	  handle char and int value methods with the same name.
	- Added fl_read_image() function.
	- Fixed Fl_Valuator::format() so that the correct format
	  type is used when step == 1.0.
	- Fl_Help_View didn't support the TT markup.
	- Fl_Shared_Image used a double-pointer to the image
	  handler functions, which was unnecessary and
	  unintuitive.
	- Fl_PNM_Image didn't load the height of the image
	  properly.
	- Fl_BMP_Image, Fl_JPEG_Image, Fl_PNG_Image, and
	  Fl_Shared_Image didn't delete image data that was
	  allocated.
	- Enabled the OpenGL and threads demos when compiling
	  for MingW.