@@ -1,7 +1,7 @@
 dnl -*- sh -*-
 dnl the "configure" script is made from this by running GNU "autoconf"
 dnl
-dnl "$Id: configure.in,v 1.33.2.31.2.71 2002/06/08 12:51:38 easysw Exp $"
+dnl "$Id: configure.in,v 1.33.2.31.2.72 2002/06/24 02:04:54 easysw Exp $"
 dnl
 dnl Configuration script for the Fast Light Tool Kit (FLTK).
 dnl
@@ -553,7 +553,7 @@ AC_SUBST(MAKEDEPEND)
 dnl Add warnings to compiler switches:
 dnl do this last so messing with switches does not break tests
 
-if test -n "$GXX"; then
+if test -n "$GCC"; then
     # Starting with GCC 3.0, you must link C++ programs against either
     # libstdc++ (shared by default), or libsupc++ (always static).  If
     # you care about binary portability between Linux distributions,
@@ -748,5 +748,5 @@ dnl Make sure the fltk-config script is executable...
 chmod +x fltk-config
 
 dnl
-dnl End of "$Id: configure.in,v 1.33.2.31.2.71 2002/06/08 12:51:38 easysw Exp $".
+dnl End of "$Id: configure.in,v 1.33.2.31.2.72 2002/06/24 02:04:54 easysw Exp $".
 dnl
